# UbuntuResourceMonitor1

./: .replit  config.py  main.py  pyproject.toml  requirements.txt  system_metrics.py
static/css/: styles.css
static/js/: dashboard.js
templates/: dashboard.html
